--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "env-cmd": "^10.1.0",
     "graphql": "^16.5.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -24,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:prod": "env-cmd -f .env.prod npm run-script build"
   },
   "eslintConfig": {
     "extends": [
